--- a/UI/personTasks.html
+++ b/UI/personTasks.html
@@ -1,6 +1,6 @@
-<html>
+﻿<html>
 	<head>
-		<link rel="stylesheet" href="../tasks.css" />
+		<link rel="stylesheet" href="tasks.css" />
 	   	<script language="javascript">
 			function loadXML(filename){
 				if (window.ActiveXObject){
